# healthharmony

./: .dockerignore  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  502.html  Dockerfile  Dockerfile.dev  Makefile  README.rst  build.zsh  categories.json  data copy.json  data.json  datas.json  db.json  docker-compose.custom.yml  docker-compose.dev.yml  docker-compose.yml  inventory.json  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  sample-test.json  sample-user.json  setup.json  temp.json  treatment.json  users.json  webpack.config.js
CSS/: login.css  main.css
JS/: main.js
administrator/: admin.py  models.py  urls.py  views.py
api/: serializers.py  urls.py  views.py
app/: asgi.py  settings.py  urls.py
base/: functions.py  urls.py  views.py
bed/: admin.py  models.py  tests.py
blood/: admin.py
datas/: illness.json
healthharmony/: .env  install_lang.py  manage.py
html/: google.html
inventory/: admin.py  models.py
local/: settings.dev.py  settings.prod.py
miko add/: 404page.css  404page.html  authen-code1.html  code.css  index.css  index.html  inventoryButton.js  no-bed-index.html  nurse.html  overview-right-part.html  reset-pass.css  reset-pass.html  sample.html  script.js  seemore.js  slider.css  slider.html
patient/: tests.py  urls.py  views.py
prod/: settings.prod.py
scripts/: deploy.sh  production_data.py
staff/: urls.py  views.py
templates/: base.html  bed.html  doctors.html  header.html  hero.html  landingpage.html  login.html  navbar.html  nurse.html  weather.html
(+541 files in other folders)
