[tool.poetry]
name = "healthharmony"
version = "0.1.0"
description = ""
authors = ["IamIsthill <159409061+IamIsthill@users.noreply.github.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.8"
django = "5.0.6"
django-debug-toolbar = "4.4.6"
django-environ = "0.11.2"
django-multiselectfield = "0.1.12"
django-rest-framework = "0.1.0"
django-seed = "0.3.1"
djangorestframework = "3.15.1"
environ = "1.0"
faker = "26.0.0"
idna = "3.7"
joblib = "1.4.2"
numpy = "1.26.4"
pandas = "2.2.2"
pillow = "10.4.0"
psycopg2-binary = "2.9.9"
pycparser = "2.22"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.31.0"
scikit-learn = "1.4.2"
scipy = "1.13.0"
six = "1.16.0"
sqlparse = "0.5.0"
threadpoolctl = "3.5.0"
toposort = "1.10"
tzdata = "2024.1"
urllib3 = "2.2.1"
django-split-settings = "^1.3.2"
daphne = "^4.1.2"
textacy = "^0.13.0"
spacy = "^3.7.5"
imbalanced-learn = "^0.12.3"
whitenoise = "^6.7.0"
django-storages = "^1.14.4"
boto3 = "^1.35.10"
twisted = {extras = ["http2", "tls"], version = "^24.7.0"}
django-allauth = "^65.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
